# libpspme

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
examples/basic/: CMakeLists.txt  main.c
include/: me.h
src/example/: CMakeLists.txt  main.c
src/lib/: CMakeLists.txt  me.c
src/module/: CMakeLists.txt  main.c
